# LocalHomeApp

./: .env.example  .gitignore  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation_update.md  feature_request.md  phase_task.md
docs/: PRD.md  ROADMAP.md
docs/adr/: ADR-0001-project-structure.md  ADR-0002-telegram-channel-model.md  ADR-0003-dual-local-ocr-strategy.md  ADR-0004-openclaw-telegram-ingress.md  ADR-0005-dual-local-ocr-engine-selection.md  README.md
docs/architecture/: architecture-overview.md  data-flow.md  openclaw-localhomeapp-handoff.md  portability-strategy.md  privacy-boundaries.md
docs/modules/: README.md  apple-vision-bridge.md  apple-vision-ocr.md  application-settings.md  database-connection.md  database-migration-runner.md  delivery-hooks.md  file-hashing.md  file-system-paths.md  intake-event-store.md  intake-events.md  intake-orchestrator.md  intake-result.md  intake-status.md  intake-workflow.md  interaction-service.md  inventory-signal-generator.md  item-normalizer.md  line-item-cleaner.md  (+50 more)
scripts/: query_purchase_history.py  run_apple_vision_ocr_once.py  run_config_validation.py  run_end_to_end_pipeline_demo.py  run_health_check.py  run_inventory_signal_demo.py  run_local_intake_service.py  run_new_receipt_ocr_parse_once.py  run_output_demo.py  run_phase3_validation_summary.py  run_purchase_history_summary.py  run_real_receipt_evaluation.py  run_receipt_parse_once.py  run_storage_persistence_demo.py  run_tesseract_comparison_once.py  run_tesseract_ocr_once.py
(+186 files in other folders)
